# dnssync

./: .gitignore  README.md  pyproject.toml
dnssync/: __main__.py  app.py  config.toml  file.py  models.py  network.py
tests/: test_sync.py
