[tool.poetry]
name = "dnssync"
version = "0.1.0"
description = ""
authors = ["Jonathan Nakandala"]
readme = "README.md"
packages = [{include = "dnssync"}]


[tool.poetry.dependencies]
python = "^3.10"
scapy = "^2.4.5"
python3-nmap = "^1.6.0"
ifaddr = "^0.2.0"
pyyaml = "^6.0"
pydantic = "^1.10.2"
pydantic-yaml = "^0.8.1"
structlog = "^22.3.0"
tomli = "^2.0.1"


[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
pylint = "^2.15.9"
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pylint.'MESSAGES CONTROL']
extension-pkg-whitelist = "pydantic"